Restructure project to follow Flask best practices
- Separate routes, utilities, and templates into distinct directories
- Set up config and instance directories
- Prepare structure for future improvements in data processing and PDF extraction
- Add placeholder files for models and tests

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ __pycache__/
 config/
 scripts/
 repo_context/
+uploads/
+commands.txt
+output.txt*.pyc
+__pycache__/
+venv/
+*.db
+instance/
+.DS_Store
